Refactored class to enhance modularity: separated declaration and implementation for improved code organization.

--- a/LinearRegression.vcxproj.filters
+++ b/LinearRegression.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="LinearRegression.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LinearRegressionClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LinearRegressionClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
