--- a/LinearRegression.vcxproj
+++ b/LinearRegression.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LinearRegression.cpp" />
+    <ClCompile Include="LinearRegressionClass.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LinearRegressionClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
